<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="stRampAnalytic" Id="{5b85efca-8c4d-4dbf-86a6-be527fef5b32}">
    <Declaration><![CDATA[TYPE stRampAnalytic :
STRUCT
	lrExp2R: 	LREAL;
	lrGain:		LREAL;
	lrOffset:	LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>