<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="F_Lineare_Regression" Id="{3edbfffa-f4cc-4127-850a-a183256d3cb0}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_Lineare_Regression : stRampAnalytic
VAR_IN_OUT
	Messwerte:          ARRAY[*] OF stMesswerte;
	uiStart: 	          UINT;	
	uiEnd: 		          UINT; 	///Bei 0 gilt Upper Bound
END_VAR
VAR
	i: 					        DINT;
	diLow: 				      DINT;
	diHigh: 			      DINT;
	rMittelwert: 		    stMesswerte;
	lrSteigung: 		    LREAL;
	lrAchsenabschnitt: 	LREAL;
	lrTempY_s: 			    LREAL;
	lrZaehlerMw: 		    LREAL;
	lrNennerMw: 		    LREAL;
	lrSumSqrtY_Ys:		  LREAL;
	lrSumSqrtY_Yd:		  LREAL;
	lrSqrtR:			      LREAL;
	
	stOut:				      stRampAnalytic;
	bFault:             BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_Lineare_Regression.lrGain := 0;
F_Lineare_Regression.lrOffset := 0;
F_Lineare_Regression.lrExp2R := -1;
diLow := LOWER_BOUND(Messwerte, 1);
diHigh := UPPER_BOUND(Messwerte, 1);
IF uiEnd > 0 THEN
	diLow := uiStart;
	diHigh := uiEnd;
END_IF 
rMittelwert.X := 0;
rMittelwert.Y := 0;
//Mittelwert ermitteln
FOR i := diLow TO diHigh DO
	rMittelwert.X := rMittelwert.X + Messwerte[i].X;
	rMittelwert.Y := rMittelwert.Y + Messwerte[i].Y;
END_FOR
	IF (DINT_TO_REAL(diHigh - diLow) + 1) <> 0 THEN
	rMittelwert.X := rMittelwert.X / (DINT_TO_REAL(diHigh - diLow) + 1);
	rMittelwert.Y := rMittelwert.Y / (DINT_TO_REAL(diHigh - diLow) + 1);
ELSE
	bFault := TRUE;	
END_IF

//Steigung = Mittelwert X durch Mittelwert Y


lrZaehlerMw := 0;
lrNennerMw := 0;

FOR i:=diLow TO diHigh DO
	lrZaehlerMw :=	lrZaehlerMw + (Messwerte[i].X - rMittelwert.X) * (Messwerte[i].Y - rMittelwert.Y);
	//lrNennerMw:=	lrNennerMw+		(basic.expn((Messwerte[i].X-rMittelwert.X),2));
END_FOR
//lrZaehlerMw:=	lrZaehlerMw	/(DINT_TO_REAL(diHigh-diLow)+0);
//lrNennerMw:=	lrNennerMw	/(DINT_TO_REAL(diHigh-diLow)+0);


//Steigung = 
IF lrNennerMw <> 0 THEN
	lrSteigung := lrZaehlerMw / lrNennerMw;
ELSE
	bFault := TRUE;
END_IF
lrAchsenabschnitt := rMittelwert.Y - (lrSteigung * rMittelwert.X);
(*
FOR i:=diLow TO diHigh DO
	lrTempY_s:=					(Messwerte[i].X*lrSteigung)+lrAchsenabschnitt;
	Messwerte[i].sqr_Y_Ys:=		basic.EXPN((Messwerte[i].Y-lrTempY_s),2);
	
	Messwerte[i].SQR_Y_Yd:=		basic.EXPN((Messwerte[i].Y-rMittelwert.Y),2);
END_FOR
*)
lrSumSqrtY_Ys := 0;
lrSumSqrtY_Yd := 0;
(*
FOR i:=diLow TO diHigh DO
	lrSumSqrtY_Ys:=lrSumSqrtY_Ys+Messwerte[i].sqr_Y_Ys;
	lrSumSqrtY_Yd:=lrSumSqrtY_Yd+Messwerte[i].SQR_Y_Yd;
END_FOR
*)
FOR i := diLow TO diHigh DO
	lrTempY_s := (Messwerte[i].X * lrSteigung) + lrAchsenabschnitt;
	//lrSumSqrtY_Ys:=	lrSumSqrtY_Ys+	basic.EXPN((Messwerte[i].Y-lrTempY_s),2);
	
	//lrSumSqrtY_Yd:=	lrSumSqrtY_Yd+	basic.EXPN((Messwerte[i].Y-rMittelwert.Y),2);
END_FOR

IF lrSumSqrtY_Yd <> 0 THEN
	lrSqrtR := 1 - (lrSumSqrtY_Ys / lrSumSqrtY_Yd);
ELSE
	bFault := TRUE;
END_IF
IF NOT bFault THEN
	F_Lineare_Regression.lrGain := lrSteigung;
	F_Lineare_Regression.lrOffset := lrAchsenabschnitt;
	F_Lineare_Regression.lrExp2R := lrSqrtR;
END_IF

]]></ST>
    </Implementation>
    <LineIds Name="F_Lineare_Regression">
      <LineId Id="118" Count="1" />
      <LineId Id="73" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="188" Count="0" />
      <LineId Id="190" Count="1" />
      <LineId Id="189" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="120" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="122" Count="1" />
      <LineId Id="121" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="36" Count="1" />
      <LineId Id="112" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="43" Count="1" />
      <LineId Id="35" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="53" Count="2" />
      <LineId Id="125" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="126" Count="2" />
      <LineId Id="56" Count="0" />
      <LineId Id="154" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="58" Count="2" />
      <LineId Id="48" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="162" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="156" Count="5" />
      <LineId Id="155" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="70" Count="1" />
      <LineId Id="131" Count="1" />
      <LineId Id="130" Count="0" />
      <LineId Id="163" Count="0" />
      <LineId Id="116" Count="1" />
      <LineId Id="111" Count="0" />
      <LineId Id="164" Count="0" />
      <LineId Id="115" Count="0" />
      <LineId Id="92" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>